--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "kronostechnologies/account-service-sdk-php",
-    "version": "dev",
     "description": "Provides HTTP endpoints to manage User Accounts and User Sessions.",
     "keywords": [
         "openapitools",
@@ -13,6 +12,7 @@
     ],
     "homepage": "https://openapi-generator.tech",
     "license": "unlicense",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "OpenAPI-Generator contributors",
